fixed skills overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -460,7 +460,7 @@ a:focus {
 
   .skills-tools {
     justify-content: space-evenly;
-    flex-direction: row;
+    flex-direction: column;
   }
   #about .container .skills-tools ul {
     line-height: 1;
